高林阁:修改了前端页面

--- a/health_web/src/main/webapp/pages/role.html
+++ b/health_web/src/main/webapp/pages/role.html
@@ -116,7 +116,7 @@
 
 
                                     <el-tab-pane label="菜单信息" name="second">
-									<div class="checkScrol">
+									    <div class="checkScrol">
                                         <table class="datatable">
                                             <thead>
                                             <tr>
@@ -139,7 +139,7 @@
                                         </table>
 									</div>
                                     </el-tab-pane>
-                                    <el-tab-pane label="权限信息" name="second">
+                                    <el-tab-pane label="权限信息" name="third">
                                         <div class="checkScrol">
                                             <table class="datatable">
                                                 <thead>
