--- a/health_web/src/main/webapp/pages/report_userage.html
+++ b/health_web/src/main/webapp/pages/report_userage.html
@@ -15,11 +15,11 @@
     <body class="hold-transition">
         <div id="app">
             <div class="content-header">
-                <h1>统计分析<small>套餐占比</small></h1>
+                <h1>统计分析<small>会员年龄占比</small></h1>
                 <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
                     <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
                     <el-breadcrumb-item>统计分析</el-breadcrumb-item>
-                    <el-breadcrumb-item>套餐占比</el-breadcrumb-item>
+                    <el-breadcrumb-item>会员年龄占比</el-breadcrumb-item>
                 </el-breadcrumb>
             </div>
             <div class="app-container">
@@ -32,6 +32,7 @@
     </body>
     <!-- 引入组件库 -->
     <script src="../js/vue.js"></script>
+
     <script src="../js/axios-0.18.0.js"></script>
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
@@ -40,12 +41,12 @@
         // 使用刚指定的配置项和数据显示图表。
         //myChart.setOption(option);
 
-        axios.get("/report/getSetmealReport.do").then((res)=>{
-            console.log(res.data.data.setmealNames)
+        axios.get("/member/getMemberAgeReport.do").then((res)=>{
+            console.log(res.data.data.memberAgeNames)
             myChart1.setOption({
                 title : {
                     text: '某站点用户访问来源',
-                    subtext: '纯属虚构',
+                    subtext: '绝对真实',
                     x:'center'
                 },
                 tooltip : {
@@ -55,7 +56,7 @@
                 legend: {
                     orient: 'vertical',
                     left: 'left',
-                    data:res.data.data.setmealNames//['张三','李四']
+                    data:res.data.data.memberAgeNames//['张三','李四']
                 },
                 series : [
                     {
@@ -63,7 +64,7 @@
                         type: 'pie',
                         radius : '55%',
                         center: ['50%', '60%'],
-                        data:res.data.data.memberCount,//[{name:'张三',value:1},{name:'李四',value:2}]
+                        data:res.data.data.memberAgeCount,//[{name:'张三',value:1},{name:'李四',value:2}]
                         itemStyle: {
                             emphasis: {
                                 shadowBlur: 10,
