--- a/health_web/src/main/webapp/pages/report_usersex.html
+++ b/health_web/src/main/webapp/pages/report_usersex.html
@@ -15,11 +15,11 @@
     <body class="hold-transition">
         <div id="app">
             <div class="content-header">
-                <h1>统计分析<small>套餐占比</small></h1>
+                <h1>统计分析<small>会员性别占比</small></h1>
                 <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
                     <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
                     <el-breadcrumb-item>统计分析</el-breadcrumb-item>
-                    <el-breadcrumb-item>套餐占比</el-breadcrumb-item>
+                    <el-breadcrumb-item>会员性别占比</el-breadcrumb-item>
                 </el-breadcrumb>
             </div>
             <div class="app-container">
@@ -40,12 +40,12 @@
         // 使用刚指定的配置项和数据显示图表。
         //myChart.setOption(option);
 
-        axios.get("/report/getSetmealReport.do").then((res)=>{
-            console.log(res.data.data.setmealNames)
+        axios.get("/member/getMemberSexReport.do").then((res)=>{
+            console.log(res.data.data.memberNames)
             myChart1.setOption({
                 title : {
                     text: '某站点用户访问来源',
-                    subtext: '纯属虚构',
+                    subtext: '绝对真实',
                     x:'center'
                 },
                 tooltip : {
@@ -55,7 +55,7 @@
                 legend: {
                     orient: 'vertical',
                     left: 'left',
-                    data:res.data.data.setmealNames//['张三','李四']
+                    data:res.data.data.memberNames//['张三','李四']
                 },
                 series : [
                     {
