--- a/health_web/src/main/webapp/pages/report_userage.html
+++ b/health_web/src/main/webapp/pages/report_userage.html
@@ -45,7 +45,7 @@
             console.log(res.data.data.memberAgeNames)
             myChart1.setOption({
                 title : {
-                    text: '某站点用户访问来源',
+                    text: '传智健康用户资源信息',
                     subtext: '绝对真实',
                     x:'center'
                 },
