--- a/health_web/src/main/webapp/pages/report_usersex.html
+++ b/health_web/src/main/webapp/pages/report_usersex.html
@@ -44,7 +44,7 @@
             console.log(res.data.data.memberNames)
             myChart1.setOption({
                 title : {
-                    text: '某站点用户访问来源',
+                    text: '传智健康用户资源信息',
                     subtext: '绝对真实',
                     x:'center'
                 },
